Fix spacing on home page

--- a/src/client/app/home/github-readme/github-readme.component.scss
+++ b/src/client/app/home/github-readme/github-readme.component.scss
@@ -1,3 +1,7 @@
+mat-expansion-panel {
+	margin-bottom: 10px;
+}
+
 .github-readme-container ::ng-deep code {
 	white-space: pre-line;
 }
